--- a/src/index.html
+++ b/src/index.html
@@ -3,6 +3,6 @@
     <script src="bundle.js"></script>
   </head>
   <body>
-    <p>holy cow.</p>
+    <img src="assets/logo.png" />
   </body>
 </html>
